[gd_scene load_steps=4 format=3 uid="uid://dtp6tu878rwvo"]

[ext_resource type="Script" path="res://game/pause_menu/pause_menu.gd" id="1_vvk1x"]
[ext_resource type="Texture2D" uid="uid://daovkqr2cv48a" path="res://game_feature/Tutorial/tutorial_plus.png" id="2_ta7qr"]
[ext_resource type="Texture2D" uid="uid://i7rmsgwa2ur1" path="res://game/UI/buttons/pause_menu.png" id="3_wyko8"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vvk1x")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.118
anchor_top = 0.147
anchor_right = 0.327
anchor_bottom = 0.722
offset_left = -57.936
offset_top = -46.256
offset_right = 12.296
offset_bottom = 46.144
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1746.0
offset_top = -28.0
offset_right = 1296.0
offset_bottom = -182.0
rotation = 0.785397
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("2_ta7qr")

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.108
anchor_top = 0.066
anchor_right = 0.316
anchor_bottom = 0.83
offset_left = -166.36
offset_top = 23.72
offset_right = -525.72
offset_bottom = -761.4

[node name="PausenMenuÌˆ" type="Sprite2D" parent="Buttons"]
position = Vector2(408, 443)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_wyko8")

[node name="Respawn" type="Button" parent="Buttons"]
modulate = Color(1, 1, 1, 0.25098)
z_index = 2
layout_mode = 2
offset_left = 287.0
offset_top = 165.0
offset_right = 533.0
offset_bottom = 231.0
theme_override_font_sizes/font_size = 50

[node name="Reload" type="Button" parent="Buttons"]
modulate = Color(1, 1, 1, 0.25098)
layout_mode = 2
offset_left = 283.0
offset_top = 246.0
offset_right = 536.0
offset_bottom = 299.0
theme_override_font_sizes/font_size = 50

[node name="Settings" type="Button" parent="Buttons"]
modulate = Color(1, 1, 1, 0.25098)
layout_mode = 2
offset_left = 287.0
offset_top = 422.0
offset_right = 547.0
offset_bottom = 500.0
theme_override_font_sizes/font_size = 50

[node name="Quit to Main" type="Button" parent="Buttons"]
modulate = Color(1, 1, 1, 0.25098)
layout_mode = 2
offset_left = 276.0
offset_top = 626.0
offset_right = 544.0
offset_bottom = 687.0
theme_override_font_sizes/font_size = 50

[node name="End" type="Button" parent="Buttons"]
modulate = Color(1, 1, 1, 0.25098)
layout_mode = 2
offset_left = 302.0
offset_top = 698.0
offset_right = 533.0
offset_bottom = 775.0
theme_override_font_sizes/font_size = 50
text = "
"

[connection signal="button_up" from="TextureButton" to="." method="_on_resume_button_up"]
[connection signal="button_up" from="Buttons/Respawn" to="." method="_on_respawn_button_up"]
[connection signal="button_down" from="Buttons/Reload" to="." method="_on_reload_button_down"]
[connection signal="button_up" from="Buttons/Settings" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="Buttons/Quit to Main" to="." method="_on_end_button_up"]
[connection signal="button_up" from="Buttons/End" to="." method="quit"]
